[tool.poetry]
name = "nobunaga-area-map"
version = "0.1.0"
description = ""
authors = ["shimat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
shapely = "^2.0.4"
randomcolor = "^0.4.4.6"
pydantic = "^2.8.2"
pydantic-yaml = "^1.3.0"
more-itertools = "^10.3.0"
orjson = "^3.10.6"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.4"
networkx = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
